<resources>
    <string name="app_name">Folclor Mexicano</string>
    <string name="Ingresar">Ingresar</string>
    <string name="LoginBienvenida">¡BIENVENIDO A FOLCLOR MEXICANO!</string>
    <string name="creditos">App Creada por Heyner Pat</string>
    <string name="Usuario">Usuario:</string>
    <string name="Contraseña">Contraseña:</string>
    <string name="estado1">Quintana Roo</string>
    <string name="estado2">Yucatán</string>
    <string name="estado3">Campeche</string>
    <string name="estado4">Jalisco</string>
    <string name="estado5">Queretaro</string>
    <string name="estado6">Sinaloa</string>
    <string name="iSeleccion">Bienvenido! Seleccione un estado para poder ver los bailes folcloricos provenientes de esa region:</string>
    <string name="Entrar">Ver bailes</string>
    <string name="Info">Ver mas</string>
    <string name="BaileQR1">Pasacalle</string>
    <string name="BaileQr2">Chicleros</string>
    <string name="BaileQr3">Sambay Macho</string>
    <string name="BaileQr4">Baile en un Pie</string>
    <string name="BaileQr5">Popurrí</string>
    <string name="BaileQr6">Fandango</string>
    <string name="BaileYuc1">Suertes</string>
    <string name="BaileYuc2">Chinito Koy Koy</string>
    <string name="BaileYuc3">Mujeres que se pintan</string>
    <string name="BaileYuc4">Aires yucatecos</string>
    <string name="BaileYuc5">Angaripola</string>
    <string name="BaileYuc6">Cintas</string>
    <string name="BaileCamp1">Pichito amoroso</string>
    <string name="BaileCamp2">La guaranducha</string>
    <string name="BaileCamp3">Pregonero</string>
    <string name="BaileCamp4">Aire cubano</string>
    <string name="BaileCamp5">Baile de botella</string>
    <string name="BaileCamp6">Almudes</string>
    <string name="BaileJalis1">Toro viejo</string>
    <string name="BaileJalis2">Las alazanas</string>
    <string name="BaileJalis3">Jarabe tapatio</string>
    <string name="BaileJalis4">El tranchete</string>
    <string name="BaileJalis5">El caballito</string>
    <string name="BaileJalis6">El huizache</string>
    <string name="BaileQuere1">Huapango</string>
    <string name="BaileQuere2">El rebozo</string>
    <string name="BaileQuere3">La malagueña</string>
    <string name="BaileQuere4">El queretano</string>
    <string name="BaileQuere5">El sombrerito</string>
    <string name="BaileQuere6">Pinal de amoles</string>
    <string name="BaileSina1">El toro mambo</string>
    <string name="BaileSina2">El sinaloense</string>
    <string name="BaileSina3">El coyote</string>
    <string name="BaileSina4">El niño perdido</string>
    <string name="BaileSina5">El gallito</string>
    <string name="BaileSina6">Guacamaya</string>
</resources>