<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo5"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/LoginBienvenida"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/Usuario"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/usuario"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:errorIconDrawable="@null"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/Contraseña"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/bloquear"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPassword"
        app:errorIconDrawable="@null"
        app:passwordToggleEnabled="true"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/bIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Ingresar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creditos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />
</LinearLayout>