<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuintanaRoo">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary_variant"
        android:elevation="4dp"
        android:textAlignment="center"
        app:title="@string/estado1"
        app:titleTextColor="@color/black"
        tools:ignore="MissingConstraints"></androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="BAILES"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="185dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/BaileQR1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/mexicoespectacular"
                tools:srcCompat="@drawable/mexicoespectacular" />

            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="185dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/BaileQR1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Info" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="188dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/BaileQR1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="185dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/BaileQR1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Info" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="188dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/BaileQR1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="175dp"
            android:layout_height="185dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/BaileQR1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Info" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>